--- a/src/components/SPA.css
+++ b/src/components/SPA.css
@@ -929,6 +929,22 @@ a {
 .w3-hover-shadow:hover {
   box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
 }
+.w3-card-custom{
+  height: 750px;
+  width: 400px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  margin-inline-start: 10%;
+}
+@media screen{
+  [w3-card-custom]{
+    align-items: center;
+  }
+}
+.custom-card-dimensions{
+  height: 300px;
+  width: 300px;
+  align-self: center;
+}
 .w3-spin {
   animation: w3-spin 2s infinite linear;
 }
@@ -941,18 +957,19 @@ a {
   }
 }
 .w3-animate-fading {
-  animation: fading 10s infinite;
+  animation: fading 5s;
 }
 @keyframes fading {
   0% {
     opacity: 0;
   }
   50% {
-    opacity: 1;
+    opacity: 0.5;
   }
   100% {
-    opacity: 0;
+    opacity: 1;
   }
+  
 }
 .w3-animate-opacity {
   animation: opac 0.8s;
