--- a/client/src/components/styles/clientRewards.scss
+++ b/client/src/components/styles/clientRewards.scss
@@ -25,9 +25,10 @@ $radius: 0.2rem;
 
 .wrapper_rewards {
   display: grid;
-  grid-template-columns: repeat(auto-fit, 120rem);
-  grid-template-rows: repeat(auto-fit, 12rem);
-  gap: 1rem;
+  //grid-template-columns: repeat(auto-fit, 120rem);
+  grid-template-rows: repeat(auto-fit, 13rem);
+  width: 100%;
+  gap: 0.1rem;
 }
 
 .card_rewards {
