--- a/client/src/components/styles/navbar2.css
+++ b/client/src/components/styles/navbar2.css
@@ -84,6 +84,7 @@
     margin: 0px;
     font-weight: 1000;
    }
+
    /* NAVBAR MENU */
    .menu {
     display: flex;
@@ -91,8 +92,8 @@
     font-weight: 800;
     text-align: center;
     align-items: center;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
+    padding-left: 0rem;
+    padding-right: 10rem;
    }
    .menu li:hover {
     background-color: black;
@@ -100,7 +101,18 @@
     transition: 0.3s ease;
    }
    .menu li {
-    padding: 10px 25px;
+    padding: 10px 20px;
+   }
+
+   .logout {
+    display: flex;
+    font-size: 1.2rem;
+    font-weight: 800;
+    text-align: center;
+    align-items: center;
+    position: absolute;
+    right: 2rem;
+    top: 5.4rem;
    }
    /* DROPDOWN MENU */
    .services {
@@ -155,6 +167,14 @@ input[type=checkbox]{
     text-align: center;
     padding: 10px 0px;
     z-index: 1500;
+   }
+
+   .logout {
+    text-align: center;
+    position: absolute;
+    right: 2rem;
+    top: 5rem;
+    z-index: 1700;
    }
 
    .logo {
