--- a/client/src/components/bankLanding/bank.css
+++ b/client/src/components/bankLanding/bank.css
@@ -1,19 +1,27 @@
-.user {
+.greeting {
     margin-bottom: 0;
+    padding-left:40px;
+    padding-top: 40px;
+}
+
+.user {
+    padding-left: 40px;
 }
 
 .backgnd {
-    background: linear-gradient(rgba(105,105,105,1),transparent);
-    width: 2500px;
-    height: 600px;
+    background: linear-gradient(rgb(42, 42, 42),transparent);
 }
 
 .carousel {
     display: block;
-    width: 800px;
-    padding: 40px;
+    padding: 40px; 
 }
 
 .wrap {
     white-space: normal;
+}
+
+.side {
+    display: flex;
+    flex-direction: row;
 }
