--- a/client/src/components/bankLanding/bank.css
+++ b/client/src/components/bankLanding/bank.css
@@ -6,6 +6,7 @@
 
 .user {
     padding-left: 40px;
+    margin-bottom: 0;
 }
 
 .backgnd {
@@ -24,4 +25,13 @@
 .side {
     display: flex;
     flex-direction: row;
+}
+
+.image {
+    opacity: 0.9;
+    padding-left: 100px;
+}
+
+.h3 {
+    margin-bottom: 0;
 }
